src/test/deca/context/invalid/created/rule3.43/outclass.deca
// Résultat erreur:
//    'This' utilisé hors d'une méthode de classe (règle 3.43)
//
// Description:
//    Tests de programme incorrect contextuellement ('This' utilisé hors d'une méthode de classe)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode() {
        return 5;
    }
}

class AutreClasse {
    int uneMethode() {
        MaClasse obj = new MaClasse();
        return This.maMethode;
    }
}
